--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,23 +27,30 @@ jobs:
       - name: Check frontend-build contents
         run: ls -al frontend-build
 
+      - name: Prepare frontend build folder (flatten dist/)
+        run: |
+          rm -rf frontend-build
+          mkdir frontend-build
+          cp -r dist/. frontend-build/    # “dist/ 의 내용 모두” 복사
+
       - name: Deploy via SCP to EC2
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.DEPLOY_SERVER_HOST }}
           username: ${{ secrets.DEPLOY_SERVER_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
-          source: "frontend-build/."
+          source: "frontend-build/*"
           target: "~/frontend-temp"
 
       - name: SSH into EC2 and move files with sudo
-        uses: appleboy/ssh-action@v0.1.5
+        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.DEPLOY_SERVER_HOST }}
           username: ${{ secrets.DEPLOY_SERVER_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           script: |
-            sudo mkdir -p /var/www/html
             sudo rm -rf /var/www/html/*
-            sudo cp -r ~/frontend-temp/* /var/www/html/
-            rm -rf ~/frontend-temp
+            sudo mv ~/frontend-temp/* /var/www/html/
+            sudo chown -R www-data:www-data /var/www/html
+            sudo chmod -R 755              /var/www/html
+            sudo systemctl reload nginx
