--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "lucide-vue-next": "^0.542.0",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.3",
     "tailwind": "^4.0.0",
     "vue": "^3.5.13",
